--- a/src/components/Features/components/css/styles.css
+++ b/src/components/Features/components/css/styles.css
@@ -7,9 +7,9 @@
 }
 
 .second-tab-grid{
-    display: grid;
-    grid-template-rows: 45%;
-    padding-bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 50px;
     gap: 4rem;
    
   
@@ -42,10 +42,10 @@
 
 .third-tab-grid{
     padding-top: 50px;
-    display: grid;
-    grid-template-rows:60%;
-    gap: 4rem;
-    padding-bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-bottom: 50px;
    
   
 }
