--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -10,9 +10,8 @@
     padding-top: 2rem;
 }
 .header-grid{
-    display: grid;
-    grid-template-rows: 50%;
-    place-items: center;
+    display: flex;
+    flex-direction: column;
     gap: 1.5rem;
     margin: auto;
 }
