--- a/src/components/Features/features.css
+++ b/src/components/Features/features.css
@@ -64,9 +64,8 @@ font-size: 0.8rem;
     place-items: center;
 }
 .first-tab{
-    display: grid;
-    grid-template-rows:repeat(1fr);
-    place-items: center;
+    display: flex;
+    flex-direction: column;
     gap: 2rem;
 }
 .first-tab-holder{
