--- a/src/components/Features/features.css
+++ b/src/components/Features/features.css
@@ -1,7 +1,7 @@
 .features-header{
     display: grid;
     place-items: center;
-    color: white;
+    color: black;
     padding-top: 70px;
 }
 .features-header h1{
