--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    color: #9f9caf;
+    color: black;
     padding: 20px;
     padding-top: 70px;
 }
@@ -30,7 +30,7 @@
         grid-template-columns: 40% 40% 20%;
         place-items: center;
         gap: 1rem;
-        color: #9f9caf;
+        color: black;
         padding: 100px;
     }
     
